fixed a css error which caused posts to overlap in posts index

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -282,12 +282,13 @@ body {
 }
 
 .blog-card {
-	width: 590px !important;
+	height:280px !important;
+	margin-left: 16px;
 	margin-bottom: 30px;
 	overflow:hidden;
 	background:#fff;
 	padding: 15px;
-	 border-radius: 10px;
+	border-radius: 10px;
  	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-o-border-radius: 10px;
